--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.onesignal.androidsdk.onesignal-gradle-plugin' version '0.7.0'
 }
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
 apply plugin: 'com.google.firebase.firebase-crash'
 
@@ -12,6 +14,7 @@ repositories {
     maven {
         url 'http://sdk.uxcam.com/android/'
     }
+    mavenCentral()
 }
 
 Properties props = new Properties()
@@ -126,6 +129,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -155,7 +159,7 @@ dependencies {
     implementation "com.jakewharton:butterknife:${butterKnifeVersion}", {
         exclude group: 'com.android.support'
     }
-    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",{
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}", {
         exclude group: 'com.android.support'
     }
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
@@ -191,6 +195,7 @@ dependencies {
     }
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsDispatcherVersion"
     testImplementation "junit:junit:$junitVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
