--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,14 @@ android {
         applicationId "co.loystar.loystarbusiness"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 109
+        versionCode 114
         versionName '1.6'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [onesignal_app_id               : "00205c9f-9af0-47b8-9b4d-d63e9a432b83",
                                 onesignal_google_project_number: "REMOTE"]
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
+        resConfigs "en"
     }
     flavorDimensions "versionCode"
     dataBinding {
