--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation "io.requery:requery:$requeryVersion"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation "io.requery:requery-android:$requeryVersion"
     annotationProcessor "io.requery:requery-processor:$requeryVersion"
@@ -200,6 +201,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
